--- a/abi/Cargo.toml
+++ b/abi/Cargo.toml
@@ -6,3 +6,9 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+prost = "0.11.6"
+prost-types = "0.11.6"
+tonic = "0.8.3"
+
+[build-dependencies]
+tonic-build = "0.8.4"
