--- a/reservation/Cargo.toml
+++ b/reservation/Cargo.toml
@@ -6,3 +6,9 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+abi = { version = "0.1.0", path = "../abi" }
+anyhow = "1.0.68"
+async-trait = "0.1.64"
+chrono = { version = "0.4.23", features = ["serde"] }
+sqlx = { version = "0.6.2", features = ["uuid", "postgres", "chrono", "runtime-tokio-rustls"] }
+thiserror = "1.0.38"
